# FeedMeWell

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bot.py  bot_magic.py  bot_magic_utils.py  db.py  docker-compose.yml  handlers.py  notes  queries.py  requirements.txt  settings.py  utils.py  utils_functions.py  utils_keyboards.py
bot_files/: Dockerfile  Dockerfile-prod  bot.py  config.py  db.py  db_common_queries.py  db_test_queries.py  get_data.py  handlers.py  pyproject.toml  queries.py  queries_engine.py  queries_engine_utils.py  settings.py  test_queries.py  utils_functions.py  utils_keyboards.py
useful_helpers/: db_common_queries.py  fetch_data_from_rapid_api.py  tripadvisor_api_wrapper.py
